# aipdf-trans-live

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: file_browser.py  pdf_viewer.py  renderer.py  table_handler.py  translation_panel.py  translator.py
