[project]
name = "aipdf-trans-live"
version = "0.1.0"
description = "PDF drag-to-translate desktop app powered by Claude AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "google-genai>=1.0.0",
    "mistune>=3.0.0",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.2.2",
    "ttkbootstrap>=1.10.1",
    "playwright>=1.49.0",
]
